# goit-web_hw-module-11

./: main.py  pyproject.toml
conf/: config.py
database/: db.py
migrations/: env.py
migrations/versions/: 185f22a07626_v0_1_12.py  41be152ab5a7_fullname_expression.py  5f3d0fbd0b19_initial_tables.py  6c1ea9fbf907_init.py  b5ddd8651781_fullname_added.py  d9bac9673563_fullname_changed.py  e275b8baaf6a_second_revision.py
src/conf/: config.py
src/contacts/: models.py  repository.py  routes.py  schemas.py
src/database/: db.py
src/entity/: models.py
src/repository/: contacts.py
src/routes/: contacts.py  notes.py
src/schemas/: contact.py  note.py
src/static/templates/: index.html
